k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oddsjunction
  namespace: oddsjunction
spec:
  selector:
    app: oddsjunction
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
